# hyped.distributed

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
src/hyped/distributed/: __init__.py  map.py  parallel.py  pipe.py  pool.py  utils.py
tests/hyped/distributed/: const_processor.py  test_parallel.py  test_pipe.py
